# redis-client-kit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  release-please-config.json  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish.yml
docs/: index.md
docs/guide/: advanced.md  configuration.md  quickstart.md
docs/reference/: index.md
redis_client_kit/: __init__.py  config.py  protocols.py  utils.py
redis_client_kit/aio/: __init__.py  factory.py  instrumented.py  lifecycle.py  types.py
redis_client_kit/metrics/: __init__.py  _deps.py  redis.py
redis_client_kit/providers/: __init__.py  _deps.py  redis.py  utils.py
redis_client_kit/settings/: __init__.py  _deps.py  redis.py
redis_client_kit/sync/: __init__.py  factory.py  instrumented.py  lifecycle.py  types.py
tests/: conftest.py
tests/integration/: conftest.py  test_redis_lifecycle.py
tests/unit/: conftest.py  test_utils (копия с компьютера DESKTOP-31J4G1K).py  test_utils.py
tests/unit/aio/: test_client (копия с компьютера DESKTOP-31J4G1K).py  test_client.py  test_instrumented_exceptions.py  test_metrics.py  test_resilience.py  test_uvloop_handling.py
tests/unit/metrics/: test_metrics_init.py
tests/unit/providers/: test_providers_init.py
tests/unit/settings/: __init__.py  test_redis_settings.py  test_settings_import_error.py
tests/unit/sync/: test_sync_client.py  test_sync_instrumented.py  test_sync_instrumented_exceptions.py  test_sync_lifecycle.py  test_sync_metrics.py  test_sync_resilience.py
