[project]
name = "redis-client-kit"
dynamic = ["version"]
description = "Redis client with optional Pydantic, Prometheus, and Dishka support"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Alex Shalaev", email = "shalaevad.alexey@gmail.com" }]
keywords = ["redis", "async", "client", "pydantic", "prometheus", "metrics", "dishka", "asyncio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "redis>=4.5.0,<8.0.0",
]

[project.urls]
Repository = "https://github.com/bedrock-python/redis-client-kit"
Documentation = "https://bedrock-python.github.io/redis-client-kit/"
Changelog = "https://github.com/bedrock-python/redis-client-kit/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/bedrock-python/redis-client-kit/issues"

[project.optional-dependencies]
# Feature extras
settings = [
    "pydantic>=2.0.0,<3.0",
    "pydantic-settings>=2.0.0,<3.0",
]
metrics = [
    "prometheus-client>=0.16.0,<1.0",
]
providers = [
    "dishka>=1.3.0,<2.0",
]

# Convenience extras
all = [
    "redis-client-kit[settings,metrics,providers]",
]

[dependency-groups]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "testcontainers[redis]>=4.0.0",
]
docs = [
    "zensical>=0.0.37",
    "mkdocstrings-python>=2.0.3",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    { include-group = "test" },
]

[tool.uv]
link-mode = "copy"

[tool.hatch.version]
path = "redis_client_kit/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["redis_client_kit"]

[tool.hatch.build.targets.sdist]
include = ["/redis_client_kit", "/README.md", "/LICENSE", "/CHANGELOG.md"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
python_version = "3.10"
files = ["redis_client_kit"]
mypy_path = ["."]
check_untyped_defs = true
disallow_untyped_defs = true
implicit_reexport = false
ignore_missing_imports = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true


[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "N", "S", "C4", "DTZ", "SIM", "TRY", "PERF", "RUF", "UP", "ANN", "T20", "PTH", "PLC", "PLE", "PLW"]
ignore = ["TRY003", "S101", "ANN401", "RUF012", "S104", "S105", "S106", "ANN204", "DTZ", "ANN", "N802", "PERF401", "PERF203", "SIM105", "S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: mark a test as a unit test.",
    "integration: mark a test as an integration test.",
]

[tool.coverage.run]
source = ["redis_client_kit"]
omit = [
    "tests/*",
    "*/test_*.py",
    "*/_deps.py",
    "redis_client_kit/metrics/redis.py",
    "redis_client_kit/providers/redis.py",
    "redis_client_kit/providers/utils.py",
]

[tool.coverage.report]
fail_under = 90
